--- a/.github/workflows/pythonapp.yml
+++ b/.github/workflows/pythonapp.yml
@@ -20,6 +20,8 @@ jobs:
       uses: actions/setup-python@v1
       with:
         python-version: 3.8
+    - name: List up files on the current folder
+      run: ls
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
