--- a/.github/workflows/pythonapp.yml
+++ b/.github/workflows/pythonapp.yml
@@ -24,8 +24,9 @@ jobs:
       run: ls
     - name: Install dependencies
       run: |
+        cd ./.github/workflows/
         python -m pip install --upgrade pip
-        pip install -r ./.github/workflows/requirements.txt
+        pip install -r requirements.txt
     - name: Lint with flake8
       run: |
         pip install flake8
