--- a/.github/workflows/pythonapp.yml
+++ b/.github/workflows/pythonapp.yml
@@ -20,8 +20,6 @@ jobs:
       uses: actions/setup-python@v1
       with:
         python-version: 3.8
-    - name: List up files on the current folder
-      run: ls
     - name: Install dependencies
       run: |
         cd ./.github/workflows/
@@ -34,7 +32,6 @@ jobs:
         flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
         # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
         flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
-    - name: Test with pytest
+    - name: Get the number of infecteds by states from Wikipedia
       run: |
-        pip install pytest
-        pytest
+        python dataFromWebpage.py
