Setting a current directory has to be done in each 'run:' section in GitHub Actions

--- a/.github/workflows/pythonapp.yml
+++ b/.github/workflows/pythonapp.yml
@@ -34,5 +34,6 @@ jobs:
         flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
     - name: Get the number of infecteds by states from Wikipedia
       run: |
+        cd ./.github/workflows/
         ls
         python dataFromWebpage.py
