Outputting a result file for debug

--- a/.github/workflows/pythonapp.yml
+++ b/.github/workflows/pythonapp.yml
@@ -34,7 +34,7 @@ jobs:
         flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
     - name: Get the number of infecteds by states from Wikipedia
       run: |
-        ls
         cd ./.github/workflows/
-        ls
         python dataFromWebpage.py
+        cat newDailyInfectedByStates.csv
+        
