Adding fetching from The Star Online to GitHub Actions

--- a/.github/workflows/pythonapp.yml
+++ b/.github/workflows/pythonapp.yml
@@ -38,6 +38,10 @@ jobs:
       run: |
         cd ./.github/workflows/
         python dataFromWikipedia.py
+    - name: Get the number of nationwide total from The Star Online
+      run: |
+        cd ./.github/workflows/
+        python dataFromStarOnline.py
     - name: Export the above results to GitHub repository
       env:
         GIT_OWNER_EMAIL: ${{ secrets.GIT_OWNER_EMAIL }}
