--- a/.github/workflows/pythonapp.yml
+++ b/.github/workflows/pythonapp.yml
@@ -5,11 +5,11 @@ name: Python application
 
 on:
   schedule:
-    - cron: 12 0/2 * * * # 12 mins, every 2 hours
-#  push:
-#    branches: [ master ]
-#  pull_request:
-#    branches: [ master ]
+#    - cron: 12 0/2 * * * # 12 mins, every 2 hours
+  push:
+    branches: [ master ]
+  pull_request:
+    branches: [ master ]
 
 jobs:
   build:
