--- a/.github/workflows/pythonapp.yml
+++ b/.github/workflows/pythonapp.yml
@@ -4,7 +4,7 @@
 name: Python application
 
 on:
-  schedule:
+#  schedule:
 #    - cron: 12 0/2 * * * # 12 mins, every 2 hours
   push:
     branches: [ master ]
