--- a/.github/workflows/pythonapp.yml
+++ b/.github/workflows/pythonapp.yml
@@ -4,12 +4,12 @@
 name: Python application
 
 on:
-#  schedule:
-#    - cron: 12 0/2 * * * # 12 mins, every 2 hours
-  push:
-    branches: [ master ]
-  pull_request:
-    branches: [ master ]
+  schedule:
+    - cron: 12 0/2 * * * # 12 mins, every 2 hours
+#  push:
+#    branches: [ master ]
+#  pull_request:
+#    branches: [ master ]
 
 jobs:
   build:
