--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -34,6 +34,10 @@ jobs:
         flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
         # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
         flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
+    - name: Prepare case files for Rt for both naitonwide and by-state
+      run: |
+        cd ./Rt/
+        python prepareCumulCases_Rt.py
     - name: Compute and save Rt both naitonwide and by-state
       run: |
         cd ./Rt/
