Experiment to see if GitHub Actions workflow is triggered by a commit from another workflow.

--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -4,8 +4,8 @@
 name: update computation
 
 on:
-  schedule:
-    - cron: 20 0/2 * * * # 20 mins, every 2 hours
+#  schedule:
+#    - cron: 20 0/2 * * * # 20 mins, every 2 hours
   push:
     branches: [ master ]
 #  pull_request:
