--- a/.github/workflows/RtMalaysia.yml
+++ b/.github/workflows/RtMalaysia.yml
@@ -4,8 +4,9 @@
 name: compute Rt in Malaysia
 
 on:
-#  schedule:
-#    - cron: 20 0/2 * * * # 20 mins, every 2 hours
+  schedule:
+    - cron: 20 0/2 * * * # 20 mins, every 2 hours
+  [workflow_dispatch]
   push:
     branches: [ master ]
 #  pull_request:
