--- a/.github/workflows/RtMalaysia.yml
+++ b/.github/workflows/RtMalaysia.yml
@@ -6,7 +6,8 @@ name: compute Rt in Malaysia
 on:
   schedule:
     - cron: 20 0/2 * * * # 20 mins, every 2 hours
-  [workflow_dispatch]
+  workflow_dispatch:
+    branches: [ master ]
   push:
     branches: [ master ]
 #  pull_request:
