--- a/.github/workflows/RtMalaysia.yml
+++ b/.github/workflows/RtMalaysia.yml
@@ -8,8 +8,8 @@ on:
     - cron: 20 0/2 * * * # 20 mins, every 2 hours
   workflow_dispatch:
     branches: [ master ]
-  push:
-    branches: [ master ]
+#  push:
+#    branches: [ master ]
 #  pull_request:
 #    branches: [ master ]
 
