GitHub Actions now run a script of web-stripping of a blog of the Health Director of Malaysia instead of fetching a table from Wikipedia

--- a/.github/workflows/fetchMalaysiaData.yml
+++ b/.github/workflows/fetchMalaysiaData.yml
@@ -39,7 +39,7 @@ jobs:
     - name: Get the number of infecteds by states from Wikipedia
       run: |
         cd ./
-        python dataFromWikipedia.py
+        python dataFromHealthDirectorBlog.py
     - name: Get the number of nationwide total from The Star Online
       run: |
         cd ./
