Test commit from Visual Studio 2019

--- a/.gitignore
+++ b/.gitignore
@@ -261,3 +261,20 @@ __pycache__/
 *.pyc
 /Rt/data/bak
 /Rt/bak
+/Rt_Japan/p_delay_onset_confirm.csv
+/Rt_Japan/p_delay_infection_onset.csv
+/Rt_Japan/p_delay_infection_confirm.csv
+/Rt_Japan/posteriors.csv
+/Rt_Japan/Japan_onsetFromConfirmed.csv
+/Rt_Japan/Japan_confirmedOnly.xlsx
+/Rt_Japan/Japan_confirmedOnly.csv
+/Rt_Japan/Japan_adjustedOnsetConfirmedOnly.csv
+/Rt_Japan/data/Japan_posterior.xlsx
+/Rt_Japan/data/Japan_posterior.csv
+/Rt_Japan/data/Japan_NotPosterior.xlsx
+/Rt_Japan/data/Japan_incubationTimeDist.xlsx
+/Rt_Japan/data/Japan_confirmedRt.csv
+/Rt_Japan/data/Japan_confirmed.xlsx
+/Rt_Japan/data/Japan.xlsx
+/Rt_USA
+/rt_USA.html
