--- a/.github/workflows/fetchMalaysiaData.yml
+++ b/.github/workflows/fetchMalaysiaData.yml
@@ -36,10 +36,15 @@ jobs:
         flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
         # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
         flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
-    - name: Get the number of infecteds by states from a blog of Health Director of Malaysia
+    - name: Get the number of infecteds of nationwide and by-state from GitHub of Ministry of Health Malaysia
       run: |
         cd ./
-        python dataFromHealthDirectorBlog.py
+        python dataFromMOHGitHub.py
+    #- name: Get the number of infecteds by states from a blog of Health Director of Malaysia
+    #  run: |
+    #    cd ./
+    #    python dataFromHealthDirectorBlog.py
+
     #- name: Get the number of nationwide total from The Star Online
     #  run: |
     #    cd ./
